--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "Hello",
+            "request": "launch",
+            "mainClass": "Hello",
+            "projectName": "AdventOfCode2023_45435850"
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\3\\solve.mjs",
+            "program": "${workspaceFolder}\\3\\solve.mjs"
         }
     ]
 }
